--- a/about.html
+++ b/about.html
@@ -305,7 +305,7 @@ Utilize energy to make the best lead generation campaigns.
               </script>
               All rights reserved | This template is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Pranay Dokras</a>
+              <a href="https://colorlib.com" target="_blank">iStarga</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
