--- a/email_append.html
+++ b/email_append.html
@@ -276,7 +276,7 @@ Any email that Accurate Append appends or verifies is verified as deliverable on
               </script>
               All rights reserved | This template is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Pranay Dokras</a>
+              <a href="https://colorlib.com" target="_blank">iStarga</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
