--- a/lead_generation.html
+++ b/lead_generation.html
@@ -273,7 +273,7 @@ Account based marketing is a key way to deal with conventional lead generation. 
               </script>
               All rights reserved | This template is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Pranay Dokras</a>
+              <a href="https://colorlib.com" target="_blank">iStarga</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
